--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           github_user_name: Bellapy
           outputs: |
-            dist/github-contribution-grid-snake.svg
+            dist/snake.svg   # 👉 AQUI ESTAVA O ERRO
 
       - name: Push Snake Animation to Output Branch
         uses: crazy-max/ghaction-github-pages@v3
@@ -27,3 +27,4 @@ jobs:
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
